# world-happiness-dashboard

./: .devenv.flake.nix  .gitignore  devenv.nix  pyproject.toml
src/: app.py  prepare_data.py
src/assets/: styles.css
