[project]
name = "world-happiness-dashboard"
version = "1.0.0"
description = "The dashboard with data visualization for World Happines Report dataset"
requires-python = ">=3.13"
dependencies = [
    "dash>=3.3.0",
    "dash-bootstrap-components>=2.0.4",
    "numpy>=2.4.0",
    "pandas>=2.3.3",
    "plotly>=6.5.0",
    "pycountry>=24.6.1",
]
